# Catonpublisher

./: build.gradle  catonpublisher.jks  gradle.properties  local.properties  readme.md
app/: CMakeLists.txt  build.gradle
app/release/: Catonpublisher-1.0-build 5.apk  Catonpublisher-1.0-build-5-camera2-2160P.apk  Catonpublisher-1.0-build-6-camera2.apk  output.json
app/src/androidTest/java/com/saisai/catonpublisher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hevc_sps_process.c  push.c  pushstream.c  pushstream.c.bak  pushstream.c.bak2  pushstream.h  sps_process.c  sps_process.h
app/src/main/cpp/mpegts/: crc32.c  mpeg-element-descriptor.h  mpeg-packet.c  mpeg-pes.c  mpeg-sdt.c  mpeg-system-header.c  mpeg-ts-enc.c  mpeg-ts-h264.c  mpeg-ts-h265.c  mpeg-ts-proto.h  mpeg-ts.h  mpeg-util.c  mpeg-util.h
app/src/main/cpp/r2tp/include/: netio.h  r2tp.h
app/src/main/cpp/ssl/include/openssl/: sha.h
app/src/main/cpp/yuv/include/libyuv/: rotate.h
app/src/main/java/com/saisai/catonpublisher/: Constants.java  Jni.java  (+1 more)
app/src/main/res/drawable/: button_back_enable_shape_raidus.xml  button_back_shape_raidus.xml  button_normal_shape_raidus.xml  button_shape_raidus.xml  count_down_text_shape.xml  edit_shape_raidus.xml  ib_switchcamera_press_bg.xml  ib_switchflash_press_bg.xml  iv_back_selector.xml  live_text_back_shape_raidus.xml  text_back_selector.xml  text_selector.xml
app/src/main/res/layout/: activity_camera2.xml  activity_config.xml  activity_home_page.xml  activity_screen_record.xml  activity_splash.xml  activity_test_video.xml  fragment_camera2_basic.xml  fragment_live.xml  fragment_setting.xml  item_live.xml  item_spinner_custom.xml
app/src/main/res/layout-land/: activity_camera2.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh/: strings.xml
(+52 files in other folders)
